--- a/dist-template/CHANGELOG
+++ b/dist-template/CHANGELOG
@@ -17,3 +17,12 @@ v2.1.0 - 2/18/23
                 Now: Repeats base channels to fill in excess channels (See SoX -c option)
     Bug fixes:
         - Checks settings on server start (Rather than waiting for a client to connect)
+
+---------------------------------------------
+v2.2.0 - 3/24/23
+	- created auto version update scripts
+	- improve user message formatting
+	- initial commit, get local IP
+	- add author and change nodemon script name
+	- run pkg from npx
+	- automate tgz compression and build
